Add new settings

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -21,6 +21,10 @@
         "sideBar.foreground": "#3c3836",
         "selection.background": "#cc241d",
         "editor.focusedStackFrameHighlightBackground": "#d79921",
+        "list.activeSelectionForeground": "#d79921",
+        "input.background": "#3c3836",
+        // "input.foreground": "#ff0000",
+        // "input.placeholderForeground": "#ff0000",
         "editorSuggestWidget.border": "#f2e5bc",
         "editorSuggestWidget.selectedBackground": "#5c534f",
         "list.activeSelectionBackground": "#3c3836",
