Update tmux conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,11 +8,11 @@ set -g @plugin 'jimeh/tmux-themepack'
 # set -g @plugin 'git@github.com/user/plugin'
 # set -g @plugin 'git@bitbucket.com/user/plugin'
 
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run -b '~/.tmux/plugins/tpm/tpm'
-
 # Set tmux theme
 set -g @themepack 'powerline/block/magenta'
+
+# Tmux colors
+set -g default-terminal "screen-256color"
 
 # Prefix keybind
 unbind C-b
@@ -41,3 +41,7 @@ bind -n M-k select-pane -U
 
 # Close Pane
 bind -n M-q kill-pane
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run -b '~/.tmux/plugins/tpm/tpm'
+
