--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,7 +9,7 @@ set -g @plugin 'jimeh/tmux-themepack'
 # set -g @plugin 'git@bitbucket.com/user/plugin'
 
 # Set tmux theme
-set -g @themepack 'powerline/block/magenta'
+set -g @themepack 'powerline/double/orange'
 
 # Tmux colors
 set -g default-terminal "screen-256color"
@@ -31,7 +31,7 @@ bind M-h resize-pane -L 15
 unbind '"'
 unbind %
 bind | split-window -h
-bind \ split-window -v
+bind \\ split-window -v
 
 # Switch Panes
 bind -n M-h select-pane -L
@@ -44,4 +44,3 @@ bind -n M-q kill-pane
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
-
