--- a/config/coc/extensions/package.json
+++ b/config/coc/extensions/package.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
-    "coc-snippets": ">=2.1.11",
-    "coc-pairs": ">=1.2.18",
-    "coc-phpls": ">=2.0.7"
+    "coc-eslint": ">=1.3.2",
+    "coc-pairs": ">=1.2.21",
+    "coc-phpls": ">=2.2.0",
+    "coc-snippets": ">=2.2.9"
   }
 }
