--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,7 +9,7 @@ set -g @plugin 'jimeh/tmux-themepack'
 # set -g @plugin 'git@bitbucket.com/user/plugin'
 
 # Set tmux theme
-set -g @themepack 'powerline/double/orange'
+set -g @themepack 'powerline/double/red'
 
 # Tmux colors
 set -g default-terminal "screen-256color"
